Tue Sep 26 21:05:48 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * DAnCE/Plan_Launcher/Plan_Launcher_Impl.cpp
        Fixed the "conversion from '_var' to 'CORBA::Object*'" warning.

Tue Sep 26 15:52:12 UTC 2006  Boris Kolpackov  <boris@codesynthesis.com>

        * docs/tutorials/Quoter/Simple/Broker/Broker.cidl:
        * docs/tutorials/Quoter/Simple/Distributor/Distributor.cidl:

        Added missing semicolons.

Mon Sep 25 23:19:15 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * DAnCE/Plan_Launcher/Plan_Launcher_Impl.cpp
        Modified the fetch_reference_naming () to remove its arguments related
        to Repoman.

        * DAnCE/Plan_Generator/PCVisitor.h
        Adjusted the order of the data members of Plan_Generator_i class.


Mon Sep 25 19:46:37 UTC 2006  Nishanth Shankaran  <nshankar@dre.vanderbilt.edu>

        * DAnCE/Plan_Generator/Plan_Generator.mpc (project): Fixed the MPC
          file by removing the "requires += RepositoryManager" as this
          project, as well as other projects that depend on this, will not
          be built unless RepositoryManager=1 is set.

Mon Sep 25 14:42:03 UTC 2006  Nishanth Shankaran  <nshankar@dre.vanderbilt.edu>

        * DAnCE/Plan_Launcher/Plan_Launcher.mpc: Fixed the mpc file.

Mon Sep 25 13:06:05 UTC 2006  Boris Kolpackov  <boris@codesynthesis.com>

        * CCF/CCF/IDL2/SemanticAction/Operation.cpp:
        * CCF/CCF/IDL2/SemanticAction/Operation.hpp:
        * CCF/CCF/IDL2/SemanticAction/Impl/Factory.cpp:
        * CCF/CCF/CIDL/SemanticAction/Composition.cpp:
        * CCF/CCF/CIDL/SemanticAction/Composition.hpp:

        Move some operator<< operators to the global scope so that they
        do not hide others.

Sun Sep 24 21:06:07 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * DAnCE/Plan_Launcher/Plan_Launcher_Impl.h
        Removed the unnecessary Repoman head file.
